--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,12 +392,12 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .link-tab ul.nav li.active a{border:0; border-right:1px solid #f26f6f; background:#f26f6f; color:#fff;}
 .talk-to-owner{ display:inline-block; vertical-align:top; width:100%;}
 .talk-to-carowner { padding:5px; display:inline-block; vertical-align:top; width:100%;}
-.talk-to-carowner h3{ margin:0 0 15px; padding:0; font-family:'Poppins'; font-size:16px; font-weight:normal; line-height:16px;color:#666;} 
+.talk-to-carowner h3{margin:0; padding:0; font-family:'Poppins'; font-size:16px; font-weight:normal; line-height:16px;color:#666;} 
 .talk-to-carowner h3 a{ font-family:'Roboto'; font-size:13px; line-height:16px; margin:0 0 0 5px; color:#51ca94; text-decoration:none;}
 .talk-to-carowner h3 a:hover{ color:#ff5f39;}
 .message-to-talk{ width:100%; }
 .message-to-talk textarea{ background:#fff; border:0; width:100%; height:80px; border:1px solid #f0efef; margin:0 0 10px; padding:10px; font-family:'Roboto'; font-size:14px; color:#877892;}
-.message-to-talk button{ background:#f26f6f; border:0; padding:10px 15px; color:#fff; font-family:'Roboto'; font-size:14px; color:#fff; font-weight:500; text-transform:uppercase;}
+.chat-option button{ background:#f26f6f; border:0; padding:10px 15px; color:#fff; font-family:'Roboto'; font-size:14px; color:#fff; font-weight:500; text-transform:uppercase;}
 .message-to-talk p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:20px; float:right; text-align:right; margin:0;}
 .message-to-talk p a{ color:#51ca94;}
 .message-to-talk p a:hover{ color:#ff5f39;}
@@ -533,4 +533,12 @@ span#log{font-style:italic;color:#bbb;margin-left:5px;}
 .chat_video{position:relative;display:inline-block;vertical-align:middle;}
 .chat_video:before{content:'';background:rgba(0,0,0,.4);width:100%;height:100%;position:absolute;top:0;left:0;display:block;  }
 .chat_video:after{content:'';width:0;height:0;border-top:10px solid transparent;border-bottom:10px solid transparent;border-left:10px solid #fff;position:absolute;top:50%;left:50%;
--webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);transform:translate(-50%, -50%); }
+-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);transform:translate(-50%, -50%);}
+
+.nav-tabs>li.active>a, 
+.nav-tabs>li.active>a:focus,
+.nav-tabs>li.active>a:hover{background-color:#fff;border: 1px solid #f0efef;border-bottom-color: transparent;}
+.tab-content{padding:20px;margin:0 0 20px;}
+.mar-btm-20.choose-file{margin:0;}
+.chat-option .nav-tabs {border-bottom:0;}
+.chat-option button{margin:0 15px 0 0; }
