--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,9 +405,9 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .message-to-owner ul{ list-style:none; width:100%; display:inline-block; vertical-align:top; margin:10px 0 0;background:#fff;  }
 .message-to-owner ul li{ padding:0 15px 10px 85px; min-height:65px; margin:0 0 10px; position:relative; display:table; width:100%;}
 .message-to-owner ul li:last-child{padding-bottom:0;border-bottom:0;margin:0;}
-.message-to-owner ul li .pic-01{ background:#fff; width:54px; min-height:54px; -webkit-border-radius:60px; -moz-border-radius:60px; border-radius:60px; position:absolute; left:10px; top:0; overflow:hidden;}
+.message-to-owner ul li .pic-01{ background:#fff; width:58px; min-height:58px; -webkit-border-radius:60px; -moz-border-radius:60px; border-radius:60px; position:absolute; left:10px; top:0; overflow:hidden;}
 .message-to-owner ul li .pic-01 a{ display:block; }
-.message-to-owner ul li .pic-01 img{ width:100%; height:100%;}
+.message-to-owner ul li .pic-01 img{ width:58px; height:58px;}
 .message-to-owner ul li p{ font-family:'Roboto'; font-size:14px; color:#666; line-height:16px; height:54px; display:table-cell; vertical-align:middle;margin:0;background:#e6eaee;border-radius:10px;padding:15px 65px 15px 15px;position:relative;}
 .message-to-owner ul li.user-talk p:after{border-bottom: 10px solid rgba(0, 0, 0, 0);border-right: 16px solid rgb(230, 234, 238);border-top: 12px solid rgba(0, 0, 0, 0);content: "";height: 0;left: -10px;position: absolute;top: 2px; width:0;}
 .message-to-owner ul li.rider-talk p:after{border-bottom: 10px solid rgba(0, 0, 0, 0);border-left: 16px solid rgb(230, 234, 238);border-top: 12px solid rgba(0, 0, 0, 0);content: "";height: 0;right: -10px;position: absolute;top: 2px; width:0;}
@@ -544,3 +544,24 @@ span#log{font-style:italic;color:#bbb;margin-left:5px;}
 .chat-option button{margin:0 15px 0 0; }
 
 .video-call-btn{background:url(../images/icon-01.png) no-repeat !important;background-size: 40px 40px;display:block !important;}
+.already-requested{background:#eee;border:1px solid #ddd;padding:10px 20px ;line-height:20px;border-radius:0;text-transform:uppercase;font-weight: 500;}
+.btn-default-css{padding:10px 20px;line-height:18px;border-radius:0;text-transform:uppercase;font-weight: 500; }
+
+.btm-btn-div button,
+.btm-btn-div a{vertical-align:middle;display:inline-block;margin-right:15px;text-decoration:none; }
+.choose-file > span.all_files{width:76%;border:0;padding:0;s  }
+.choose-file > span.all_files > .input-group{margin:0 0 15px; }
+.all_files_add{width:22%;vertical-align:top;display:inline-block;margin:0 0 0 5px; }
+.all_files_add a {border-radius: 0;line-height: 40px;padding:0 10px;  }
+.all_files_add a:first-child {margin:0 8px 0 0;}
+.notification-count a{color:#fff;}
+
+.badge {font-size: 11px;height: 18px;line-height:14px;min-width: 20px;padding:3px 6px;vertical-align: middle;background:#ed7575; }
+.upload-anythings {margin:0 0 25px;}
+.upload-anythings h6{margin: 0; padding: 0 0 1px; font-size: 14px; line-height: normal; color: #999; font-weight: 500; font-family: 'poppins'; text-transform: uppercase; display: block; letter-spacing: 0.08em;}
+.upload-anythings .input-group {display: inline-block; vertical-align: middle; width: 86%; } 
+.upload-anythings .input-group > input{width:86%; }
+.upload-anythings > .btn.btn-primary {background: #f26f6f; border: 2px solid #f26f6f; color: #ffffff; font-family: "Poppins"; font-size: 14px; font-weight: 700; letter-spacing: 0.04em; margin: 0 auto; padding:11px 0 7px; text-align: center; text-transform: uppercase; width: 90px;border-radius:0;  }
+
+.message-user-pic h4 small {background: #ed7575 none repeat scroll 0 0; font-size: 11px; height:18px; line-height:12px; min-width: 20px; padding: 3px 6px; vertical-align: middle;border-radius:60px;color:#fff; 
+display:inline-block;vertical-align:middle;text-align:center;}
