--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -17,7 +17,7 @@
 }
 
 @media(min-width:1440px){
-.video-box-add{width:300px;}
+.video-box-add,.ad-video-h .video-box-add{width:300px;}
 }
 
 @media (min-width:1200px) and (max-width:1499px){
@@ -28,6 +28,7 @@
 
 @media(min-width:1300px){
 .video-box-add{width:250px;}
+.ad-video-h .video-box-add{width:240px;}
 }
 @media (min-width:1200px) and (max-width:1279px){
 .benefits-content p br{display:none;}
@@ -128,7 +129,7 @@
 .nbmatches .user-likes a {margin: 0 10px;}
 .user-list-r h2 big { word-break: break-all;}
 .ad-video{left:0;position:relative;top:0;-webkit-transform:translateY(0);-moz-transform:translateY(0);transform:translateY(0);}
-.video-box-add{background:#eee;display:inline-block;margin:0 20px 20px 0;width:42%;}
+.video-box-add,ad-video-h .video-box-add{background:#eee;display:inline-block;margin:0 20px 20px 0;width:42%;}
 }
 
 @media(min-width:992px) and (max-width:1024px){
@@ -243,7 +244,7 @@ ul.my-picture-ul > li {width:100%;}
 .nbmatches .user-list-pic-bg {width:280px;height:280px;}
 .user-likes a,
 .nbmatches .user-likes a {margin: 0 5px;}
-.video-box-add {margin:0 0 20px;width:100%;}
+.video-box-add,.ad-video-h .video-box-add{margin:0 0 20px;width:100%;}
 
 }
 
