--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ ul.my-picture-ul.level2 > li {max-height:250px;overflow: hidden;padding: 0 30px 
 ul.my-picture-ul.level2 > li:nth-child(4n+4){padding-right:0; }
 ul.my-picture-ul.level2 > li .my-picture-box{border:0;}
 ul.my-picture-ul > li > .my-picture-box > a{display:block;width:100%;position:relative;overflow:hidden;height:166px; }
-ul.my-picture-ul > li > .my-picture-box > a img{min-width:166px;min-height:166px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);}
+ul.my-picture-ul > li > .my-picture-box > a img{min-width:166px;min-height:166px;position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);transform:translate(-50%, -50%);max-width:270px;}
 .my-picture-box{position:relative;border:4px solid #fff;}
 .picture-action:before{content:'';background:rgba(242,111,111,.6);width:100%;height:100%;position:absolute;top:0;left:0;z-index:-1;}
 .picture-action{opacity:0;width:100%;height:100%;position:absolute;top:0;left:0;text-align:center;z-index:10;display:block;vertical-align:middle;}
@@ -477,7 +477,7 @@ input:checked + .slider:before { -webkit-transform: translateX(56px); -ms-transf
 .instagram-connet{background:#b3404a;}
 .instagram-connet a{color:#b3404a;}
 
-ul.my-picture-ul > li > .my-picture-box > a.video-tag:before{background:rgba(0,0,0,0.7);width:100%;height:100%;display:block;content:'';position:absolute;top:0;left:0;z-index:1;}
+ul.my-picture-ul > li > .my-picture-box > a.video-tag:before{background:rgba(0,0,0,0.6);width:100%;height:100%;display:block;content:'';position:absolute;top:0;left:0;z-index:1;}
 ul.my-picture-ul > li > .my-picture-box > a.video-tag:after{content:'\e917';position:absolute;top:50%;left:50%;font-family: 'icomoon';font-size:36px;line-height:36px;color:#fff;z-index:10; transform:translate(-50%, -50%);}
 ul.my-picture-ul > li:hover .my-picture-box > a.video-tag:after{display:none; }
 
