--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,3 +582,5 @@ label.missed{font-weight:normal;display:inline;color:#f26f6f;cursor:text;}
 .account-l .back-btn-div {top:0;position:relative;margin:-5px 0 20px;}
 .back-btn-div a{background:url(../images/back-btn.png) no-repeat 0 0;display:block;width:158px;height:52px;text-decoration:none; }
 .video .back-btn-div {position:relative;top:0;left: -1px;z-index: 1;max-width: 1170px;margin:0 auto 30px;}
+.midieast-container{min-height:inherit;}
+.midieast-bg img{max-width:100%;}
