--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -242,6 +242,7 @@ ul.my-picture-ul > li {width:50%;}
 .back-btn-div{top:20px;}
 .dating-box ul.my-picture-ul > li{width:50%;}
 .drluvr-btn{position: initial;display:block;width:50%;margin: 0 auto 20px;top:0;}
+.center-content{margin:15px 0;}
 }
 
 
