--- a/assets/css/jTinder.css
+++ b/assets/css/jTinder.css
@@ -15,9 +15,9 @@ html, body {
     padding:0;
 }
 
-#tinderslide,#tinderslide2 {position:relative;width:auto;height:auto;}
-#tinderslide ul,#tinderslide2 ul{margin:0;position:relative;display:block;height:auto;}
-#tinderslide li,#tinderslide2 li{display:block;border-radius:0;margin:0; position: absolute;top:0;z-index:2;left:0;overflow:visible;text-align:center;padding:0;
+#tinderslide,#tinderslide2,#tinderslide3 {position:relative;width:auto;height:auto;}
+#tinderslide ul,#tinderslide2 ul,#tinderslide3 ul{margin:0;position:relative;display:block;height:auto;}
+#tinderslide li,#tinderslide2 li,#tinderslide3 li{display:block;border-radius:0;margin:0; position: absolute;top:0;z-index:2;left:0;overflow:visible;text-align:center;padding:0;
                                  display:block;font-size:24px;color: #000;border:0;box-shadow:none; background:transparent; box-shadow:none; background-color:transparent;
                                  -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
                                  -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
@@ -30,9 +30,9 @@ html, body {
 .user-list-pic-bg{display:block;background:transparent;width:100%;height:458px;background-color:transparent;
                   position:relative;box-shadow:0 0 26px 0 rgba(0,0,0,.06);border:6px solid rgba(255,255,255,.2);}
 .user-list-pic-bg a{display:block;}
-#tinderslide li h2,#tinderslide2 li h2{color: #fff;font-size: 30px;text-align: center;position: absolute;top: 40%;left: 0;width: 100%;}
+#tinderslide li h2,#tinderslide2 li h2,#tinderslide3 li h2{color: #fff;font-size: 30px;text-align: center;position: absolute;top: 40%;left: 0;width: 100%;}
 
-#tinderslide li.panel,#tinderslide2 li.panel {
+#tinderslide li.panel,#tinderslide2 li.panel,#tinderslide3 li.panel {
     /*-webkit-transform: rotate(-1deg);
     -moz-transform: rotate(-1deg);
     -o-transform: rotate(-1deg);
@@ -58,7 +58,9 @@ html, body {
 
 /* Like & dislike badge images */
 #tinderslide .like,
-#tinderslide .dislike,#tinderslide2 .like,#tinderslide2 .dislike {
+#tinderslide .dislike,
+#tinderslide2 .like,#tinderslide2 .dislike,
+#tinderslide3 .like,#tinderslide3 .dislike{
     background: url("../images/liked.png") no-repeat scroll 0 0;
     opacity: 0;
     height: 80px;
@@ -84,7 +86,7 @@ html, body {
 }
 
 /* Image container */
-#tinderslide .img,#tinderslide2 .img{height:100%;width:100%;background-size:100% !important;margin:0;position:relative;
+#tinderslide .img,#tinderslide2 .img,#tinderslide3 .img{height:100%;width:100%;background-size:100% !important;margin:0;position:relative;
                   -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
                   -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
                   -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
