--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -243,6 +243,7 @@ ul.my-picture-ul > li {width:50%;}
 .dating-box ul.my-picture-ul > li{width:50%;}
 .drluvr-btn{position: initial;display:block;width:50%;margin: 0 auto 20px;top:0;}
 .center-content{margin:15px 0;}
+.intesested-in {width:90%;padding:50px 30px;box-shadow:0 0 10px 0 rgba(0,0,0,.1);}
 }
 
 
